css/main.css
body {
  font-family: Century Gothic, Arial Narrow, sans-serif;
  background-color: #252525;
  background-image: url("/assets/bg.png");
  background-repeat: no-repeat;
  background-attachment: fixed;
}

.navBarTitle {  
  position:absolute; 
  top:0; 
  z-index: 6;
  max-height: 140%;
  display: block;
  margin-left: auto;
  margin-right: auto;  
  object-fit: cover;
}

.navIcon {  
 display: block;
 object-fit: contain;
 width: 150px;
 height: 150px;
 margin: auto;
 position: absolute;
 left: 0;
 right: 0;
 top: 20px;
 z-index: 6;
 
 max-height:195%;
  
  -o-transition: width 0.2s, height 0.2s;
  -moz-transition: width 0.2s, height 0.2s;
  -webkit-transition: width 0.2s, height 0.2s; /* For Safari 3.1 to 6.0 */
  transition: width 0.2s, height 0.2s, top 0.2s;
}

.navIcon:hover{
 width: 160px;
 height: 160px;
}








.navDropdown {	
  position:absolute; 
  top:0;
  right:0;
  bottom:0;
  display:block;
  margin:auto;
  z-index: 7;

  
  width: 100px;
  height: auto;
  max-height:100%;
}

.navDropdown:hover .navDropdown-Content{
display:block;
}

.navDropdown-Content{
  display:none;	
  position: absolute;
  background-color: #f9f9f9;
  min-width: 160px;
  top:100%;
  right:0;
  width:100%;
  overflow:auto;
}

.navDropdown-Content a {
  color: white;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
  font-size:20px;
}

.navDropdown-Content a:hover {
 background-color: #f1f1f1;
}


.navDropdownIcon {
  position:absolute;
  left: 0;
  right: 0;
  top:0;
  bottom:0;
  z-index: 6;
  
  max-height: 80%;
  max-width: 80%;
  
  display: block;
  margin:auto;
  object-fit: contain;
}







.navBarLinkList{
  position:absolute; 
  top:0;
  right:0;
  bottom:0;
  display:block;
  margin:auto;
  z-index: 7;
  
  height: auto;
  max-height:100%;	
		
  padding:15px;
	
  list-style-type: none;
  
  -o-transition: 0.2s;
  -moz-transition: 0.2s;
  -webkit-transition: 0.2s;
  transition: 0.2s;
}

.navBarLinkItem{
  float: right;

  margin:auto;
  object-fit: contain;
  
  padding-left:7px;
  padding-right:7px;
  
  height: auto;
  max-height:100%;
  max-width:50px;
}

.navBarLinkHome{
  display:none;

  float: right;

  margin:auto;
  object-fit: contain;
  
  padding-left:7px;
  padding-right:7px;
  
  height: auto;
  max-height:100%;
  max-width:50px;
}



.navBarActiveZone{	
  margin:auto;
  position:relative;
  display:block;

  width: 1400px;
  height: 80px;
  max-height:100%;
  
  top:0;
  z-index: 5;
}


.navBarBase {
 background-color: #111111;
 height: 80px;
 margin:auto;
 position: fixed;
 left: 0;
 right: 0;
 top: 0;
 z-index: 4;
 
-o-transition: 0.2s;
-moz-transition: 0.2s;
-webkit-transition: 0.2s;
 transition: 0.2s;
}



/* Style the header */
.header {
  /*height: 680px;*/
  width: 1400px;
  left: 0;
  right: 0;
  top: 0;
  margin:auto;
  
  position:relative;
  
  max-width: 100%;
  max-height: 100%;
  height: auto;
}

.header:hover .overlay{
	opacity: 1;
}
.header:hover .headerImg{
filter: brightness(0.5) contrast(150%) grayscale(100%);
}

.headerImg {	
  max-width: 100%;
  max-height: 100%;
  height: auto;
  
  display: block;
  margin:auto;
  object-fit: cover;
  
  position:relative;
	
    filter: brightness(1.0) contrast(100%) grayscale(0%);
	
-o-transition: 0.4s;
-moz-transition: 0.4s;
-webkit-transition: 0.4s;
transition: 0.4s;
}




.break {
 background-color: #252525;
 opacity:0;
 height: 20px;
 clear:both;
}





.gallery {
  width: 1400px;
  /*height: 350px;*/
  left: 0;
  right: 0;
  top: 0;
  margin:auto;
  
  max-width: 100%;
  max-height: 100%;
  height: auto;	
}


.column {
  float: left;
  width: 25.00%;
  width: 350px;
  height: 350px;
  color: white;
  background-color: #aaaaaa;
  
  position:relative;
}

.column:hover .overlay{
	opacity: 1;
}
.column:hover .image{
filter: brightness(0.5) contrast(150%) grayscale(100%);
}


/* Clear floats after the columns */
.row:after {
  content: "";
  display: table;
  clear: both;
}

/* Style the footer */
.footer {
  background-color: #1c1e1f;
  padding: 10px;
  text-align: center;
  color:#ffffff;
  clear:both;
}


.image{
  height: 100%;
  width: 100%;
  display:block;
  object-fit: cover;
  /*z-index:1;*/
  
  filter: brightness(1.0) contrast(100%) grayscale(0%);
  
-o-transition: 0.4s;
-moz-transition: 0.4s;
-webkit-transition: 0.4s;
transition: 0.4s;
}


.overlay {
  transition: .5s ease;
  opacity: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  
  -o-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

.overlayText {
  color: white;
  font-size: 50px;
  text-align:center;
  text-transform: uppercase;
  z-index:2;
}



.aboutPageIcon{
  object-fit:contain;
  margin:auto;
  display:block;

  width: 100%;
  height: auto;
  
  max-width:300px;
  
  border-radius: 50%;
}


.artPageImg{
  
  object-fit:contain;
  margin:auto;
  display:block;

  width: 100%;
  height: auto;
  
  max-width:1000px;
}


.artPageText{
  color: white;
  font-size: 50px;
  text-align:center;
  z-index:2;
}

.artPageNav{
 display: block;
 margin:auto;
 padding-top:20px;
 padding-bottom:20px;
 width:160px;
}

.artPageNavButton{
 width: 60px;
 height: 60px;
}


.textContainer {
	max-width: 800px;
	margin:auto;
}


/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
@media (max-width: 600px) {
  .column {
    width: 100%;
  }
}

@media only screen and (max-width: 1024px) {
  /* For mobile phones: */
   .navBarLinkHome{
    display:inline-block;
  }
   .navIcon{
    display:none;
  }
}

@media only screen and (max-width: 700px) {
  /* For mobile phones: */
    .navBarTitle{
    /*display:none;*/
	opacity:0.1;
  }
}

@media only screen and (max-width: 460px) {
  /* For mobile phones: */
    .navBarTitle{
    display:none;
  }
}

/*@media only screen and (min-width: 1400px) {
	.navBarActiveZone{
		width:1400px;
	}
}*/

